peac_dev/force-app/main/default/objects/Dealer__c/Dealer__c.object-meta.xml
<CustomObject>
    <label>Dealer</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Dealer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>