peac_dev/force-app/main/default/objects/Dealer__c/fields/Account_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Address__c</fullName>
    <formula>Dealer__r.Business_Address__c &amp; &apos; &apos; &amp; Dealer__r.Business_Address2__c &amp; &apos;, &apos; &amp; Dealer__r.Business_City__c &amp; &apos;, &apos; &amp; TEXT(Dealer__r.Business_State__c) &amp; &apos; &apos; &amp; Dealer__r.Business_Zip__c</formula>
    <label>Account Business Address</label>
    <type>Text</type>
</CustomField>