peac_dev/force-app/main/default/objects/Dealer__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Dealer__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>