peac_dev/force-app/main/default/objects/Dealer__c/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <formula>Dealer__r.Business_Phone__c</formula>
    <label>Account Phone #</label>
    <type>Text</type>
</CustomField>