peac_dev/force-app/main/default/objects/Dealer__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>App #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>