peac_dev/force-app/main/default/objects/Dealer__c/fields/Application_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Application_Billing_Address__c</fullName>
    <formula>Opportunity__r.Account_Billing_Street__c  &amp;   &quot;,&quot;   &amp;   Opportunity__r.Account_Billing_City__c &amp; &quot;,&quot; &amp; Opportunity__r.Account_Billing_State_Province__c  &amp; &quot;&quot; &amp;  Opportunity__r.Account_Business_Zip_Postal_Code__c</formula>
    <label>Application Billing Address</label>
    <type>Text</type>
</CustomField>