peac_dev/force-app/main/default/objects/Dealer__c/fields/ChangeDealer__c.field-meta.xml
<CustomField>
    <fullName>ChangeDealer__c</fullName>
    <label>ChangeDealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>