peac_dev/force-app/main/default/objects/Dealer__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer Account, Dealer_Account Development, Dealer_Account Penetration, Dealer_Close, Dealer_Discovery, Dealer_Proposal, Dealer_Qualification</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Opportunities</relationshipLabel>
    <relationshipName>Dealers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>