peac_dev/force-app/main/default/objects/Dealer__c/fields/Dealer_Account_Record_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account_Record_Owner_Profile__c</fullName>
    <formula>Dealer__r.Owner.Profile.Name</formula>
    <label>Dealer Account Record Owner Profile</label>
    <type>Text</type>
</CustomField>