peac_dev/force-app/main/default/objects/Dealer__c/fields/Dealer_Management_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Management_Email_Address__c</fullName>
    <defaultValue>&quot;dealerprograms@marlinleasing.com&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Management Email Address</label>
    <type>Email</type>
</CustomField>