peac_dev/force-app/main/default/objects/Dealer__c/fields/Funding_Method__c.field-meta.xml
<CustomField>
    <fullName>Funding_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funding Method</label>
    <type>TextArea</type>
</CustomField>