peac_dev/force-app/main/default/objects/Dealer__c/fields/Opportunity_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Profile__c</fullName>
    <formula>Opportunity__r.Owner.Profile.Name</formula>
    <label>Opportunity Owner Profile</label>
    <type>Text</type>
</CustomField>