peac_dev/force-app/main/default/objects/Dealer__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>IF(ISNUMBER(TEXT(Dealer__r.Points__c)),  VALUE(TEXT(Dealer__r.Points__c)) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>