peac_dev/force-app/main/default/objects/Dealer__c/fields/Primary_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dealer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the dealer is primary dealer.</description>
    <label>Primary Dealer</label>
    <type>Checkbox</type>
</CustomField>