peac_dev/force-app/main/default/objects/Dealer__c/fields/Primary_Dealer_Text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dealer_Text__c</fullName>
    <formula>IF( Primary_Dealer__c = True, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Primary Dealer Text</label>
    <type>Text</type>
</CustomField>