peac_dev/force-app/main/default/objects/Dealer__c/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
   !ISBLANK(Opportunity__c),
   Opportunity__r.IsClosed
)</errorConditionFormula>
    <errorMessage>Dealers cannot be added when the related opportunity&apos;s stage is closed.</errorMessage>
</ValidationRule>