peac_dev/force-app/main/default/objects/Dealer__c/validationRules/Restrict_Dealer_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Dealer_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
Opportunity__r.RecordType.Id &lt;&gt; &apos;01261000000X2LB&apos;, 
$Setup.ORE__c.Bypass__c =False, 
$Setup.ORE__c.StageBypass__c=False, 
!ISBLANK(Opportunity__c), 
TEXT(Opportunity__r.StageName)=&quot;Docs In&quot; ||
TEXT(Opportunity__r.StageName) = &quot;Docs Out&quot; || TEXT(Opportunity__r.StageName) = &quot;Docs Requested&quot; || TEXT(Opportunity__r.StageName) = &quot;Funding&quot; || TEXT(Opportunity__r.StageName) = &quot;Booking&quot; || TEXT(Opportunity__r.StageName) = &quot;Funded/Booked&quot;

)</errorConditionFormula>
    <errorMessage>Dealer Changes are not allowed once App is approved</errorMessage>
</ValidationRule>